added invocation of Gender API via Feign

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,3 +5,8 @@ management.endpoint.health.group:
     include: ping
   readiness:
     include: ping # TODO
+spring:
+  cloud:
+    loadbalancer:
+      ribbon:
+        enabled: false
